refactor/api-promotions