@@ -1,11 +1,12 @@
 package com.shop.smart_commerce_api.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
+import com.shop.smart_commerce_api.dto.request.filter.PromotionFilterRequest;
 import com.shop.smart_commerce_api.dto.request.promotion.PromotionRequest;
-import com.shop.smart_commerce_api.dto.response.attribute.AttributeResponse;
 import com.shop.smart_commerce_api.dto.response.promotion.PromotionResponse;
 import com.shop.smart_commerce_api.entities.Promotion;
 import com.shop.smart_commerce_api.exception.AppException;
@@ -14,7 +15,6 @@ import com.shop.smart_commerce_api.mapper.PromotionMapper;
 import com.shop.smart_commerce_api.repositories.PromotionRepository;
 
 import lombok.RequiredArgsConstructor;
-import lombok.var;
 
 @Service
 @RequiredArgsConstructor
@@ -22,22 +22,25 @@ public class PromotionService {
     private final PromotionRepository promotionRepository;
     private final PromotionMapper promotionMapper;
 
-    public List<PromotionResponse> getAll() {
-        var promotions = promotionRepository.findAll();
+    public List<PromotionResponse> getPromotions(PromotionFilterRequest filter) {
+        Boolean isActive = filter.getIsActived() != null ? filter.getIsActived() : true;
+        List<Promotion> promotions = promotionRepository.findByIsActive(isActive);
+
         return promotions.stream()
-                .map(promotionMapper::toPromotionResponse)
-                .toList();
+                .map(promotion -> PromotionResponse.builder()
+                        .id(promotion.getId())
+                        .description(promotion.getDescription())
+                        .discountValuePercent(promotion.getDiscountValuePercent())
+                        .startDate(promotion.getStartDate())
+                        .endDate(promotion.getEndDate())
+                        .build())
+                .collect(Collectors.toList());
     }
 
     public void create(PromotionRequest request) {
         Promotion promotion = promotionMapper.toPromotion(request);
+        promotion.setIsActive(true); // mặc định isActive = true khi tạo mới
         promotionRepository.save(promotion);
-    }
-
-    public void delete(int id) {
-        Promotion promotion = promotionRepository.findById(id)
-                .orElseThrow(() -> new AppException(ErrorCode.PROMOTION_NOT_FOUND));
-        promotionRepository.delete(promotion);
     }
 
     public void update(int id, PromotionRequest request) {
@@ -47,4 +50,14 @@ public class PromotionService {
         promotionRepository.save(promotion);
     }
 
+    /**
+     * Chuyển trạng thái khuyến mãi sang không hoạt động thay vì xóa hẳn
+     */
+    public void delete(int id) {
+        Promotion promotion = promotionRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.PROMOTION_NOT_FOUND));
+
+        promotion.setIsActive(false); // chỉ set trạng thái thành không hoạt động
+        promotionRepository.save(promotion);
+    }
 }
